# Octaskly

./: .gitignore  BUILD_AND_DISTRIBUTE.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  HELP.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALLATION_REFERENCE.md  INSTALLER_ARCHITECTURE.md  LICENSE  NATIVE_INSTALLERS.md  PROJECT_DELIVERY.md  QUICK_REFERENCE_INSTALLER.md  README.md  SECURITY.md  TERMUX_IMPLEMENTATION.md  TERMUX_SUPPORT.md  USER_INSTALLATION.md  USER_INSTALLATION_LINUX.md  USER_INSTALLATION_MACOS.md  USER_INSTALLATION_TERMUX.md  USER_INSTALLATION_WINDOWS.md
.github/workflows/: build-installers.yml.example
examples/: basic_usage.rs
installer/: octaskly-installer.iss
scripts/: README.md  build-all.sh  build-linux-deb.sh  build-linux-rpm.sh  build-linux-run.sh  build-macos-pkg.sh  install.ps1  install.sh
src/: lib.rs  main.rs  p2p_distribution.rs
src/cmd/: mod.rs
src/discovery/: mod.rs
src/p2p/: mod.rs
src/protocol/: mod.rs
src/resources/: mod.rs
src/util/: mod.rs
