[package]
name = "octaskly"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "octaskly"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio-util = "0.7"
socket2 = "0.5"
quinn = "0.11"
rustls = { version = "0.22", features = ["ring"] }
rustls-pemfile = "2.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
ratatui = "0.28"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
jsonwebtoken = "9.2"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hostname = "0.3"
futures = "0.3"
lazy_static = "1.4"
regex = "1.10"
rlimit = "0.10"
procfs = { version = "0.15", optional = true }
reqwest = { version = "0.11", features = ["json"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
tempfile = "3.8"